--- a/src/App.sass
+++ b/src/App.sass
@@ -2,12 +2,12 @@
 
 html
   font-family: 'Crimson Text', serif
-  height: 100%
   min-height: 100%
+  height: 100%
 
 body
+  min-height: 100%
   height: 100%
-  min-height: auto
   #root
     @extend body
 
@@ -19,9 +19,21 @@ div, a, span, p
   -webkit-background-clip: text
   -webkit-text-fill-color: transparent
 
+body::-webkit-scrollbar
+  width: 1em
+
+body::-webkit-scrollbar-track
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3)
+
+body::-webkit-scrollbar-thumb
+  background-color: rgba(0, 0, 0, 0.3)
+  outline: 1px solid #343a40
+
+
 .App
-  height: 100%
-  min-height: inherit
+  min-height: 100%
+  height: auto
   text-align: center
   background: url('./bg.png') center no-repeat
   background-size: cover
+  background-attachment: fixed
