--- a/src/components/homeScreen/HomeScreen.sass
+++ b/src/components/homeScreen/HomeScreen.sass
@@ -1,9 +1,40 @@
+@import '../../helpMixins'
+@import '../../queryMixins'
+
 .FirstScreen
   height: inherit
+  transform: scale(0)
+  +transition-opt('all', '.2s')
+  animation: fadeAppear 1s forwards
 
   .wolf_logo
     width: 380px
     height: 345px
     margin-top: 103px
+    margin-bottom: 60px
     background: url('./wolf_logo.png') center no-repeat
     background-size: contain
+    +mobile
+      width: 202px
+      height: 181px
+      margin-top: 40px
+      margin-bottom: 0
+    +tablet
+      width: 444px
+      height: 401px
+      margin-top: 123px
+      margin-bottom: 80px
+    +small-laptop
+      width: 284px
+      height: 257px
+      margin-top: 86px
+      margin-bottom: 0
+    +medium-laptop
+      width: 350px
+      height: 315px
+      margin-bottom: 80px
+
+  .item-select__wrapper
+    margin-bottom: 80px
+    .element-select__item
+      margin: 0 20px 25px
