--- a/src/components/rosterScreen/RoasterScreen.sass
+++ b/src/components/rosterScreen/RoasterScreen.sass
@@ -35,6 +35,7 @@
   height: 79px
   width: 88px
   margin-top: 100px
+  border: none
   +transition-opt('transform', '.3s')
   +mobile
     width: 40px
@@ -91,6 +92,7 @@
     border-radius: 50%
     -webkit-border-radius: 50%
     -moz-border-radius: 50%
+    +transition-opt('all', '.8s')
     +mobile
       max-width: 180px
       max-height: 180px
