a bit of adjusted styles. added counter wrapper to navigation block

--- a/src/components/homeScreen/HomeScreen.sass
+++ b/src/components/homeScreen/HomeScreen.sass
@@ -35,6 +35,6 @@
       margin-bottom: 80px
 
   .item-select__wrapper
-    margin-bottom: 80px
+    //margin-bottom: 80px
     .element-select__item
       margin: 0 20px 25px
